--- a/templates/utilities/image.html.twig
+++ b/templates/utilities/image.html.twig
@@ -1,5 +1,6 @@
 {% if src is defined and src is not empty %}
-	<img class="lazyload img-fluid{% if class is defined and class is not empty %} {{ class }}{% endif %}" src="{{ src }}" {% if alt is defined and alt is not empty %} alt="{{ alt }}" {% endif %} data-sizes="auto">
+	<img class="lazyload img-fluid
+		    {% if class is defined and class is not empty %} {{ class }}{% endif %}" src="{{ src }}" {% if alt is defined and alt is not empty %} alt="{{ alt }}" {% endif %} data-sizes="auto">
 {% endif %}
 
 
