--- a/assets/frontend/scss/pages/_homepage.scss
+++ b/assets/frontend/scss/pages/_homepage.scss
@@ -1,17 +1,14 @@
 .hero-section {
-  min-height: 100vh;
-  .text-component {
-    margin: px-to-rem(20) 0;
-    > * {
-      line-height: 2;
+    min-height: 100vh;
+    .text-component {
+        margin: px-to-rem(20) 0;
+        @include media-breakpoint-up(lg) {
+            > * {
+                line-height: 2;
+            }
+        }
     }
-  }
-  .image-component {
-    justify-content: flex-end;
-    img {
-      @include media-breakpoint-up(xxl) {
-        width: 75%;
-      }
+    .image-component {
+        justify-content: flex-end;
     }
-  }
 }
