feat(blocks): Beginning to add cards.xml files

--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -17,7 +17,7 @@
 
 {# Render #}
 {% if content|default(null) %}
-	<span class="d-inline-flex header-component">
+	<span class="header-component">
 		<{{headerSize}} class="{{ classes|default('') }}">
 			{{ content }}
 		</{{headerSize}}>
