--- a/assets/frontend/scss/abstracts/_utilities.scss
+++ b/assets/frontend/scss/abstracts/_utilities.scss
@@ -15,6 +15,8 @@
 .text-gray-200 {
     color: $gray-200;
 }
+
+// Important to override Bootstrap
 h5,
 .h5 {
     font-size: clamp(px-to-rem(14), 2.5vw + 0.5rem, px-to-rem(28)) !important;
