--- a/templates/content-blocks/homepage/areas_of_expertise.html.twig
+++ b/templates/content-blocks/homepage/areas_of_expertise.html.twig
@@ -1,8 +1,13 @@
 <div class="row">
-	{% include 'components/header.html.twig'  
-            with {
-            'headerSize': content.areas_of_expertise.header_size, 
-            'content': content.areas_of_expertise.header, 
-            'headerColor': content.areas_of_expertise.header_color
-            }  %}
+	<div class="col">
+		{% include 'content-blocks/text-button.html.twig'  
+        with {
+        'content': content.areas_of_expertise,
+    }  %}
+	</div>
+</div>
+<div class="row">
+	<div class="col">
+		Cheese
+	</div>
 </div>
