--- a/templates/content-blocks/homepage/hero.html.twig
+++ b/templates/content-blocks/homepage/hero.html.twig
@@ -8,7 +8,7 @@
 	<div class="col-lg-6 d-flex justify-content-end">
 		{% include 'components/image.html.twig' 
 			with {
-			'image': content.hero.image|default(null),
+			image: content.hero.image|default(null),
 			format: '425x525',
 		} %}
 	</div>
