--- a/assets/frontend/scss/abstracts/_overrides.scss
+++ b/assets/frontend/scss/abstracts/_overrides.scss
@@ -32,27 +32,27 @@ $senary: #394be7; //Royal blue
 $septenary: #eff3ff; //Light blue background variant
 
 $theme-colors: (
-  "primary": $primary,
-  "secondary": $secondary,
-  "tertiary": $tertiary,
-  "quaternary": $quaternary,
-  "quinary": $quinary,
-  "senary": $senary,
-  "septenary": $septenary,
+    "primary": $primary,
+    "secondary": $secondary,
+    "tertiary": $tertiary,
+    "quaternary": $quaternary,
+    "quinary": $quinary,
+    "senary": $senary,
+    "septenary": $septenary,
 );
 
 // Typography
 $headings-color: $primary;
 $headings-font-family:
-  "BW Gradual",
-  -apple-system,
-  BlinkMacSystemFont,
-  "Segoe UI",
-  Roboto,
-  Oxygen,
-  Ubuntu,
-  Cantarell,
-  sans-serif;
+    "BW Gradual",
+    -apple-system,
+    BlinkMacSystemFont,
+    "Segoe UI",
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    sans-serif;
 $font-family-base: "Manrope", sans-serif;
 $font-size-base: px-to-rem(16);
 // Font sizes
@@ -65,22 +65,22 @@ $h6-font-size: $font-size-base * 1.2222; // 22px
 
 // Spacers
 $spacers: (
-  0: 0,
-  1: 0.25rem,
-  2: 0.5rem,
-  3: 1rem,
-  4: 1.5rem,
-  5: 2.5rem,
-  6: 3rem,
+    0: 0,
+    1: 0.25rem,
+    2: 0.5rem,
+    3: 1rem,
+    4: 1.5rem,
+    5: 2.5rem,
+    6: 3rem,
 );
 
 // Container widths
 $container-max-widths: (
-  sm: 540px,
-  md: 720px,
-  lg: 960px,
-  xl: 1140px,
-  xxl: 1400px,
+    sm: 540px,
+    md: 720px,
+    lg: 960px,
+    xl: 1140px,
+    xxl: 1400px,
 );
 
 // Gutters
@@ -92,7 +92,9 @@ $body-color: $primary;
 
 // Borders
 $border-radius-sm: 10px;
-$border-radius: 20px;
+$border-radius: 15px;
+$border-width: 2px;
+$border-color: $primary;
 
 // Buttons
 $btn-padding-y: px-to-rem(19);
@@ -104,9 +106,10 @@ $btn-color: $primary;
 $btn-line-height: 1;
 
 //Cards
-$card-border-radius: px-to-rem(10);
+$card-border-radius: $border-radius;
 $card-spacer-x: px-to-rem(33);
 $card-spacer-y: $card-spacer-x;
+$card-border-color: $primary;
 
 //Links
 $link-decoration: none;
