feat(blocks): My Story Section XML
refactor(blocks): Refactor components

refactor(blocks): Refactor components

--- a/assets/frontend/scss/base/_base.scss
+++ b/assets/frontend/scss/base/_base.scss
@@ -13,3 +13,7 @@ Contains common syles for the entire page
     font-style: normal;
     font-display: swap;
 }
+
+h1 {
+    margin-bottom: $spacer;
+}
