--- a/templates/content-blocks/homepage/hero.html.twig
+++ b/templates/content-blocks/homepage/hero.html.twig
@@ -10,6 +10,7 @@
 			with {
 			image: content.hero.image|default(null),
 			format: '425x525',
+			classes:'d-flex justify-content-end'
 		} %}
 	</div>
 </div>
