--- a/templates/content-blocks/homepage/story.html.twig
+++ b/templates/content-blocks/homepage/story.html.twig
@@ -1,8 +1,10 @@
 <div class="row">
 	<div class="col">
-		{% include 'content-blocks/text-button.html.twig'  
-			with {
-			'content': content.story,
-		}  %}
+		{% include 'content-blocks/text-button.html.twig' with {
+            'content': content.story,
+			'classes': 'd-flex flex-column justify-content-center align-items-center',
+            'headerCssClasses': 'text-center',
+            'text_css_classes': 'text-center col-lg-10'
+        } %}
 	</div>
 </div>
