--- a/templates/content-blocks/homepage/hero.html.twig
+++ b/templates/content-blocks/homepage/hero.html.twig
@@ -1,8 +1,10 @@
 <div class="row">
-	<div class="col-lg-6">
+	<div class="col-lg-6 d-flex align-items-center">
 		{% include 'content-blocks/text-button.html.twig'  
 			with {
 			'content': content.hero,
+			'headerCssClasses': 'mb-3',
+            'text_css_classes': 'lh-lg mb-3'
 		}  %}
 	</div>
 	<div class="col-lg-6 d-flex justify-content-end">
