--- a/templates/content-blocks/homepage/story.html.twig
+++ b/templates/content-blocks/homepage/story.html.twig
@@ -1,10 +1,34 @@
-<div class="row">
-	<div class="col">
-		{% include 'content-blocks/text-button.html.twig' with {
+{% if content.story is defined and content.story is not empty %}
+	<div class="row">
+		<div class="col">
+			{% include 'content-blocks/text-button.html.twig' with {
             'content': content.story,
 			'classes': 'd-flex flex-column justify-content-center align-items-center',
             'headerCssClasses': 'text-center',
             'text_css_classes': 'text-center col-lg-10'
         } %}
+		</div>
 	</div>
-</div>
+	{% if content.story.card %}
+		<div class="row mt-5">
+			{% for card in content.story.card %}
+				<div class="col card card--story d-flex">
+					<div class="row d-flex align-items-center">
+						<div class="col">
+							{% include 'content-blocks/text-button.html.twig'  
+								with {
+								'content': card,
+								}  %}
+						</div>
+						<div class="col-4">
+							{% include 'components/image.html.twig' with {
+								image: card.image|default(null),
+								format: card.image_format|default(null),
+							} %}
+						</div>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+	{% endif %}
+{% endif %}
