--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1,15 +1,9 @@
 {# Extract data from content_block or use passed variables #}
-{% if content_block is defined %}
-	{% set headerSize = content_block.heading_size|default('h1') %}
-	{% set content = content_block.header|default(null) %}
-	{% set headerColor = content_block.header_color|default('primary') %}
-	{% set headerCssClasses = content_block.header_css_classes|default('') %}
-{% else %}
-	{% set headerSize = heading_size|default('h1') %}
-	{% set content = header|default(null) %}
-	{% set headerColor = header_color|default('primary') %}
-	{% set headerCssClasses = header_css_classes|default('') %}
-{% endif %}
+{% set content = content_block.content|default(content_block|default({})) %}
+{% set headerSize = content.header_size|default('h1') %}
+{% set headerContent = content.header|default(null) %}
+{% set headerColor = content.header_color|default('primary') %}
+{% set headerCssClasses = headerCssClasses|default('') %}
 
 {# Handle h0 special case (h1 with display-1 class) #}
 {% if headerSize == 'h0' %}
@@ -21,10 +15,10 @@
 {% set classes = 'text-' ~ headerColor ~ ' ' ~ headerCssClasses %}
 
 {# Render header if content exists #}
-{% if content %}
+{% if headerContent %}
 	<span class="header-component">
 		<{{headerSize}} class="{{ classes|trim }}">
-			{{ content }}
+			{{ headerContent }}
 		</{{headerSize}}>
 	</span>
 {% endif %}
