--- a/templates/components/text.html.twig
+++ b/templates/components/text.html.twig
@@ -5,7 +5,7 @@
 {# Only render if we have text content #}
 {% if textContent %}
 	{% set text_color = 'text-' ~ content.text_color|default('primary') %}
-	{% set text_font = content.text_font|default('manrope') %}
+	{% set text_font = content.text_font|default('') %}
 	{% set text_css_classes = text_css_classes|default('') %}
 	{% set classes = text_color ~ ' ' ~ text_font ~ ' ' ~ text_css_classes %}
 
