feat(blocks): Projects section;
refactor(blocks): cards: Added separate card xml and twig; refactor(blocks):Added the ability to pass headerSize variable into header component

--- a/templates/components/cards/card-long.html.twig
+++ b/templates/components/cards/card-long.html.twig
@@ -8,6 +8,7 @@
                     with {
                     'content': card,
                     'headerCssClasses': 'mb-3',
+					'header_size': 'h3',
                 }  %}
 					</div>
 					<div class="col col-lg-4">
