--- a/templates/components/header.html.twig
+++ b/templates/components/header.html.twig
@@ -1,6 +1,6 @@
 {# Extract data from content_block or use passed variables #}
 {% set content = content_block.content|default(content_block|default({})) %}
-{% set headerSize = content.header_size|default('h1') %}
+{% set headerSize = header_size|default(content.header_size|default('h1')) %}
 {% set headerContent = content.header|default(null) %}
 {% set headerColor = content.header_color|default('primary') %}
 {% set headerCssClasses = headerCssClasses|default('') %}
