--- a/templates/pages/homepage.html.twig
+++ b/templates/pages/homepage.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
 {% block content %}
-	{% set homepage_blocks = ['hero', 'areas_of_expertise', 'story'] %}
+	{% set homepage_blocks = ['hero', 'areas_of_expertise', 'story', 'projects'] %}
 	{% include 'layout/content-blocks.html.twig' with { ridgid_content: content, block_order: homepage_blocks } %}
 {% endblock %}
