feat(blocks): Project Section responsive

--- a/templates/content-blocks/homepage/projects.html.twig
+++ b/templates/content-blocks/homepage/projects.html.twig
@@ -1,5 +1,5 @@
 <div class="row">
-	<div class="col">
+	<div class="col mb-5">
 		{% include 'content-blocks/text-button.html.twig' with {
             'content': content,
 			'classes': 'd-flex flex-column align-items-end',
