--- a/templates/components/cards/project-cards.html.twig
+++ b/templates/components/cards/project-cards.html.twig
@@ -3,23 +3,27 @@
 {% if length > 0 %}
 	<div class="row">
 		{% for card in valid_cards %}
-			<div class="col-4 mb-5">
+			<div class="col-12 col-md-6 col-xl-4 mb-5">
 				<div class="position-relative d-flex flex-column align-items-center">
-					<div class="card card--project overflow-hidden">
-						{% include 'components/image.html.twig' with {
-							image: card.image|default(null),
-							format: 'x375',
-							classes: 'card--project-image',
-						} %}
+					<div class="card card--project w-100 overflow-hidden">
+						{% if card.image %}
+							{% include 'components/image.html.twig' with {
+								image: card.image|default(null),
+								format: 'x375',
+								classes: 'card--project-image',
+							} %}
+						{% endif %}
 					</div>
-					<div class="card card-body card--project-text col-10 position-relative">
-						{% include 'content-blocks/text-button.html.twig'  
-							with {
-							'content': card,
-							'headerCssClasses': 'mb-3',
-							'header_size': 'h6',
-						}  %}
-					</div>
+					{% if card.text_content and card.header %}
+						<div class="card card-body card--project-text col-10 position-relative">
+							{% include 'content-blocks/text-button.html.twig'  
+								with {
+								'content': card,
+								'headerCssClasses': 'mb-3',
+								'header_size': 'h6',
+							}  %}
+						</div>
+					{% endif %}
 				</div>
 			</div>
 		{% endfor %}
