feat(blocks): Add Contact section

--- a/templates/components/button.html.twig
+++ b/templates/components/button.html.twig
@@ -1,5 +1,5 @@
 {# Extract buttons data #}
-{% set buttons = content_block.buttons|default(buttons|default(null)) %}
+{% set buttons = content.buttons|default(buttons|default(null)) %}
 
 {% if buttons %}
 	<div class="d-inline-flex gap-4 button-component">
