--- a/templates/components/text.html.twig
+++ b/templates/components/text.html.twig
@@ -1,13 +1,12 @@
 {# Extract data from content_block or use passed variables #}
-{% set content = content_block.content|default(content_block|default({})) %}
 {% set textContent = content.text_content|default(null) %}
 
 {# Only render if we have text content #}
 {% if textContent %}
 	{% set text_color = 'text-' ~ content.text_color|default('primary') %}
 	{% set text_font = content.text_font|default('') %}
-	{% set text_css_classes = text_css_classes|default('') %}
-	{% set classes = text_color ~ ' ' ~ text_font ~ ' ' ~ text_css_classes %}
+	{% set textCssClasses = textCssClasses|default('') %}
+	{% set classes = text_color ~ ' ' ~ text_font ~ ' ' ~ textCssClasses %}
 
 
 	{{ textContent|add_classes(classes|trim)|raw }}
